# collaborate

./: .gitignore  LICENSE  Makefile  README.md  deploy.sh  development.sh  go.work  go.work.sum  package-lock.json  package.json
.github/workflows/: backend-ci.yml
av/: .gitignore  .indent.pro  CMakeLists.txt  Makefile
av/src/: av.c  collaborate_client.c  collaborate_client.h  collaborate_room.c  collaborate_room.h  collaborate_room_manager.c  collaborate_room_manager.h  server_util.h
av/src/pb/: Client.pb-c.c  Client.pb-c.h  CommonTypes.pb-c.c  CommonTypes.pb-c.h  Connection.pb-c.c  Connection.pb-c.h  Pointer.pb-c.c  Pointer.pb-c.h  RoomConfiguration.pb-c.c  RoomConfiguration.pb-c.h  Server.pb-c.c  Server.pb-c.h  Swifteams.pb-c.c  Swifteams.pb-c.h  User.pb-c.c  User.pb-c.h
av/src/plugins/: gstspectaclesink.c  gstspectaclesink.h
av/src/routes/: info.c  info.h  stream.c  stream.h
backend/: .air.toml  .gitignore  app.auth.yaml  app.broker.yaml  app.realtime.yaml  dev.sh  dispatch.yaml  go.mod  go.sum  main.go
backend/auth/: setup.go
backend/broker/: room.go  setup.go
broker/: app.broker.yaml  broker.go  go.mod  main.go
frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
proto/: Client.proto  ClientMessage.proto  CommonTypes.proto  Connection.proto  Makefile  Message.proto  Pointer.proto  Room.proto  RoomConfiguration.proto  Server.proto  Swifteams.proto  User.proto
realtime/: client.go  go.mod  go.sum  realtime.app.yaml  realtime.go  room.go
util/: crypto.go  go.mod
webapp/: package.json
(+140 files in other folders)
